feat: enhance Orden and Detalle business logic with new properties and methods for improved order management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.jpa.properties.hibernate.generate_statistics=false
 logging.level.org.hibernate.stat=WARN
 logging.level.org.hibernate.type=WARN
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 logging.level.root=WARN 
 
@@ -39,8 +39,9 @@ spring.datasource.hikari.auto-commit=false
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG 
 logging.level.com.zaxxer.hikari=INFO
 
-logging.level.ar.edu.iua.iw3.BackendApplication=DEBUG
+logging.level.ar.edu.iua.iw3.gastrack=DEBUG
 
+logging.level.ar.edu.iua.iw3.gastrack.model=INFO
 
 spring.jackson.time-zone=America/Argentina/Buenos_Aires
 # o 
