--- a/src/main/resources/application-mysqldev.properties
+++ b/src/main/resources/application-mysqldev.properties
@@ -1,4 +1,4 @@
-dev.info.enabled=false
+dev.info.enabled=true
 #spring.datasource.url=jdbc:mysql://mysql:3306/gastrack_prod?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&allowPublicKeyRetrieval=true
 
 spring.datasource.url=jdbc:mysql://localhost:33306/gastrack?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&allowPublicKeyRetrieval=true
