--- a/src/main/resources/application-mysqlprod.properties
+++ b/src/main/resources/application-mysqlprod.properties
@@ -2,5 +2,7 @@ dev.info.enabled=false
 spring.datasource.url=jdbc:mysql://mysql:3306/gastrack_prod?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&allowPublicKeyRetrieval=true
 
 #spring.datasource.url=jdbc:mysql://localhost:33306/gastrack_prod?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=user
+spring.datasource.password=1u4rootiw3
+# spring.datasource.username=admin
+# spring.datasource.password=admin
