--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
 		</dependency>
 	</dependencies>
 
+	<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		    <version>2.6.0</version>
+		</dependency>
+
 	<profiles>
 		<!-- Perfiles de ejecución -->
 		
