feat: add JWT authentication and authorization with role-based access control

--- a/src/main/resources/application-mysqldev.properties
+++ b/src/main/resources/application-mysqldev.properties
@@ -4,3 +4,4 @@ dev.info.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:33306/gastrack?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=admin
 spring.datasource.password=admin
+logging.level.ar.edu.iua.iw3.auth.filters.JWTAuthorizationFilter=TRACE
