basic event logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,5 +48,7 @@ spring.jackson.time-zone=America/Argentina/Buenos_Aires
 # spring.jackson.time-zone=GMT-3
 
 
-
 logging.level.ar.edu.iua.iw3.gastrack.model.business=TRACE
+
+detalles.alertas.correos=juan@example.com,ana@example.com,soporte@example.com
+detalle.umbral.temperatura.c=230.0
