--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,10 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>${tomcat.scope}</scope>
 		</dependency>
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+	</dependency>
 	</dependencies>
 
 	
