--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,5 +50,14 @@ spring.jackson.time-zone=America/Argentina/Buenos_Aires
 
 logging.level.ar.edu.iua.iw3.gastrack.model.business=TRACE
 
-detalles.alertas.correos=juan@example.com,ana@example.com,soporte@example.com
+detalles.alertas.correos=${ALERT_EMAILS:dest@gmail.com}
 detalle.umbral.temperatura.c=230.0
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SMTP_USER:user@gmail.com}
+spring.mail.password=${SMTP_PASS:clave123}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+logging.level.ar.edu.iua.iw3.gastrack.util=TRACE
