--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,10 @@
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>${tomcat.scope}</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
 	
