setup websockets y alarmas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,3 +61,6 @@ spring.mail.password=${SMTP_PASS:clave123}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.ar.edu.iua.iw3.gastrack.util=TRACE
+
+
+logging.level.ar.edu.iua.iw3.gastrack.websocket=TRACE
